--- a/Plugins/Point Visualizers/Image/DivvyImage-Info.plist
+++ b/Plugins/Point Visualizers/Image/DivvyImage-Info.plist
@@ -19,8 +19,8 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>NSMainNibFile</key>
-	<string>DivvyZhu</string>
+	<string>DivvyImage</string>
 	<key>NSPrincipalClass</key>
-	<string>DivvyZhu</string>
+	<string>DivvyImage</string>
 </dict>
 </plist>
