--- a/Core/Divvy-Info.plist
+++ b/Core/Divvy-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>Divvy</string>
+	<string>Divvy.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.ucsd.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
